--- a/site/themes/jdi/css/navigation.css
+++ b/site/themes/jdi/css/navigation.css
@@ -15,6 +15,10 @@ li a.active {
  * Navigation bar
  */
 #navigation {
+  line-height: 94px; /* Header height. */
+  margin-top: -114px; /* Header height + margin. */
+  margin-left: 400px;  /* Logo width. */
+  width: auto;
   /* overflow: hidden; /* Sometimes you want to prevent overlapping with main div. */
 }
 
@@ -28,7 +32,7 @@ li a.active {
 #navigation ul.links li, /* A simple method to get navigation links to appear in one line. */
 #navigation .content li {
   float: left; /* LTR */
-  padding: 0 10px 0 0; /* LTR */
+  padding: 0;
 }
 
 .region-navigation {
@@ -38,6 +42,58 @@ li a.active {
  * Main menu and Secondary menu links
  */
 #main-menu {
+  font-size: 1.2em;
+  font-weight: bold;
+  list-style: none;
+  text-transform: lowercase;
+}
+
+#main-menu a {
+  color: #ccc;
+  display: block;
+  padding: 0 25px;
+  text-decoration: none;
+  text-shadow: 0 0 10px #444;
+  z-index: 10;
+
+     -moz-transition-duration: 0.4s;
+       -o-transition-duration: 0.4s;
+  -webkit-transition-duration: 0.4s;
+     -moz-transition-property: background-image, color, text-shadow;
+       -o-transition-property: background-image, color, text-shadow;
+  -webkit-transition-property: background-image, color, text-shadow;
+}
+
+#main-menu a:hover,
+#main-menu a:focus,
+#main-menu a:active,
+#main-menu li:hover  > a,
+#main-menu li:focus  > a,
+#main-menu li:active > a,
+#main-menu li.active a {
+  background-image: -webkit-gradient(
+    linear,
+    left bottom,
+    left top,
+    color-stop(0,   rgba(255, 255, 255, 0.00)),
+    color-stop(0.5, rgba(255, 255, 255, 0.05)),
+    color-stop(1,   rgba(255, 255, 255, 0.00))
+  );
+  background-image: -moz-linear-gradient(
+    center bottom,
+    rgba(255, 255, 255, 0.00)   0%,
+    rgba(255, 255, 255, 0.05)  50%,
+    rgba(255, 255, 255, 0.00) 100%
+  );
+  background-image: -o-linear-gradient(
+    top,
+    rgba(255, 255, 255, 0.00)   0%,
+    rgba(255, 255, 255, 0.05)  50%,
+    rgba(255, 255, 255, 0.00) 100%
+  );
+  color: #fff;
+  outline: 0;
+  text-shadow: 0 0 60px #fff;
 }
 
 #secondary-menu {
