--- a/site/themes/jdi/css/pages.css
+++ b/site/themes/jdi/css/pages.css
@@ -136,6 +136,10 @@ div#site-name /* The name of the website */ {
 #content .section {
 }
 
+#content a {
+  text-decoration: underline;
+}
+
 .region-highlighted {
 }
 
