--- a/site/themes/jdi/css/forms.css
+++ b/site/themes/jdi/css/forms.css
@@ -4,6 +4,97 @@
  */
 
 
+/**
+ * Using formalize selectors to replace colors
+ */
+textarea,
+select,
+input[type="date"],
+input[type="datetime"],
+input[type="datetime-local"],
+input[type="email"],
+input[type="month"],
+input[type="number"],
+input[type="password"],
+input[type="search"],
+input[type="tel"],
+input[type="text"],
+input[type="time"],
+input[type="url"],
+input[type="week"] {
+  background-color: #fdfdfd;
+  border-color: #999 #aaa #aaa #999;
+  border-radius: 4px;
+  box-shadow: inset 1px 1px 5px rgba(0, 0, 0, 0.2);
+  color: #666;
+     -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+     -moz-box-shadow: inset 1px 1px 5px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: inset 1px 1px 5px rgba(0, 0, 0, 0.2);
+}
+
+textarea:focus,
+select:focus,
+input[type="date"]:focus,
+input[type="datetime"]:focus,
+input[type="datetime-local"]:focus,
+input[type="email"]:focus,
+input[type="month"]:focus,
+input[type="number"]:focus,
+input[type="password"]:focus,
+input[type="search"]:focus,
+input[type="tel"]:focus,
+input[type="text"]:focus,
+input[type="time"]:focus,
+input[type="url"]:focus,
+input[type="week"]:focus {
+  background-color: #fff;
+  border-color: #666;
+  box-shadow: inset 1px 1px 5px rgba(0, 0, 0, 0.2), 0 0 5px rgba(0, 0, 0, 0.5);
+  color: #222;
+  outline: 0;
+     -moz-box-shadow: inset 1px 1px 5px rgba(0, 0, 0, 0.2), 0 0 5px rgba(0, 0, 0, 0.5);
+  -webkit-box-shadow: inset 1px 1px 5px rgba(0, 0, 0, 0.2), 0 0 5px rgba(0, 0, 0, 0.5);
+}
+
+button,
+input[type="reset"],
+input[type="submit"],
+input[type="button"] {
+  background: #222;
+  background: -moz-linear-gradient(
+    top center,
+    #595959 0%,
+    #222  100%
+  );
+  background: -webkit-gradient(
+    linear, left top, left bottom,
+    color-stop(0, #595959),
+    color-stop(1, #222)
+  );
+  border-color: transparent transparent rgba(0, 0, 0, 0.25);
+  border-radius: 5px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+  color: #fff;
+  text-shadow: 0 -1px 1px rgba(0, 0, 0, 0.5);
+     -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+     -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+     -moz-transition: background-color .2s;
+       -o-transition: background-color .2s;
+  -webkit-transition: background-color .2s;
+}
+
+button:hover,
+input[type="reset"]:hover,
+input[type="submit"]:hover,
+input[type="button"]:hover {
+  background-color: #000;
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #404040), color-stop(1, #000));
+  background: -moz-linear-gradient(top center, #404040 0%, #000 100%);
+}
+
 .form-item /* Wrapper for a form element (or group of form elements) and its label */ {
   margin: 1.5em 0;
 }
