--- a/site/themes/jdi/css/pages.css
+++ b/site/themes/jdi/css/pages.css
@@ -155,6 +155,21 @@ div#site-name /* The name of the website */ {
   padding-bottom: 0; /* Undo system.css */
 }
 
+#content h1,
+#content h2,
+#content h3,
+#content h4,
+#content h5,
+#content h6 {
+  color: #3C3C3C;
+}
+
+#content h1 a,
+#content h2 a {
+  color: #3C3C3C;
+  text-decoration: none;
+}
+
 h1.title, /* The title of the page */
 h2.node-title, /* Title of a piece of content when it is given in a list of content */
 h2.block-title, /* Block title */
@@ -162,6 +177,13 @@ h2.title, /* Comment section heading */
 h2.comment-form, /* Comment form heading */
 h3.title /* Comment title */ {
   margin: 0;
+}
+
+h2.block-title, /* Block title */
+h2.title, /* Comment section heading */
+h2.comment-form, /* Comment form heading */
+h3.title /* Comment title */ {
+  font-weight: normal;
 }
 
 tr.even /* Some tables have rows marked even or odd. */ {
