--- a/site/themes/jdi/css/nodes.css
+++ b/site/themes/jdi/css/nodes.css
@@ -7,6 +7,7 @@
 
 
 .node /* Node wrapper */ {
+  padding: 10px;
 }
 
 .preview .node /* Preview of the content before submitting new or updated content */ {
