Improve spacing to footer blocks

--- a/site/themes/jdi/css/blocks.css
+++ b/site/themes/jdi/css/blocks.css
@@ -26,7 +26,8 @@ h2.block-title /* Block title */ {
 .block .content /* Block's content wrapper */ {
 }
 
-.sidebar .block {
+.sidebar .block,
+.region-footer .block {
   padding: 10px;
 }
 
