Add style to tabs replacing Zen's default style

--- a/site/themes/jdi/css/tabs.css
+++ b/site/themes/jdi/css/tabs.css
@@ -8,121 +8,72 @@
  * of which is in drupal6-reference.css, line 510.)
  */
 
-
-div.tabs {
-  margin: 0 0 5px 0;
+#content div.tabs {
+  border: 1px solid #ddd;
+  border-width: 1px 0;
+  background-color: rgba(0, 0, 0, 0.02);
+  background-image: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    color-stop(0,   rgba(0, 0, 0, 0.08)),
+    color-stop(0.5, rgba(0, 0, 0, 0.00))
+  );
+  background-image: -moz-linear-gradient(
+    center top,
+    rgba(0, 0, 0, 0.08)  0%,
+    rgba(0, 0, 0, 0.00) 50%
+  );
+  background-image: -o-linear-gradient(
+    bottom,
+    rgba(0, 0, 0, 0.08)  0%,
+    rgba(0, 0, 0, 0.00) 50%
+  );
+  margin: 10px -10px;
+  overflow: hidden;
 }
 
-ul.primary {
+#content div.tabs ul {
+  border: none;
+  float: right;
   margin: 0;
-  padding: 0 0 0 10px; /* LTR */
-  border-width: 0;
-  list-style: none;
-  white-space: nowrap;
-  line-height: normal;
-  background: url(../images/tab-bar.png) repeat-x left bottom;
+  padding: 4px 20px 4px 20px;
 }
 
-ul.primary li {
-  float: left; /* LTR */
-  margin: 0;
-  padding: 0;
+#content div.tabs li {
+  float: left;
 }
 
-ul.primary li a {
-  display: block;
-  height: 24px;
+#content div.tabs a {
+  background: none;
+  border: 0;
+  color: #222;
   margin: 0;
-  padding: 0 0 0 5px; /* width of tab-left.png */
-  border-width: 0;
-  font-weight: bold;
   text-decoration: none;
-  color: #777;
-  background-color: transparent;
-  background: url(../images/tab-left.png) no-repeat left -38px;
+  padding: 4px 15px 4px;
 }
 
-ul.primary li a .tab {
-  display: block;
-  height: 20px; /* 24px (parent) - 4px (padding) */
-  margin: 0;
-  padding: 4px 13px 0 6px;
-  border-width: 0;
-  line-height: 20px;
-  background: url(../images/tab-right.png) no-repeat right -38px;
+#content div.tabs a:hover {
+  color: #666;
 }
 
-ul.primary li a:hover,
-ul.primary li a:focus {
-  border-width: 0;
-  background-color: transparent;
-  background: url(../images/tab-left.png) no-repeat left -76px;
-}
-
-ul.primary li a:hover .tab,
-ul.primary li a:focus .tab {
-  background: url(../images/tab-right.png) no-repeat right -76px;
-}
-
-ul.primary li.active a,
-ul.primary li.active a:hover,
-ul.primary li.active a:focus {
-  border-width: 0;
-  color: #000;
-  background-color: transparent;
-  background: url(../images/tab-left.png) no-repeat left 0;
-}
-
-ul.primary li.active a .tab,
-ul.primary li.active a:hover .tab,
-ul.primary li.active a:focus .tab {
-  background: url(../images/tab-right.png) no-repeat right 0;
-}
-
-ul.secondary {
-  margin: 0;
-  padding: 0 0 0 5px; /* LTR */
-  border-bottom: 1px solid #c0c0c0;
-  list-style: none;
-  white-space: nowrap;
-  background: url(../images/tab-secondary-bg.png) repeat-x left bottom;
-}
-
-ul.secondary li {
-  float: left; /* LTR */
-  margin: 0 5px 0 0;
-  padding: 5px 0;
-  border-right: none; /* LTR */
-}
-
-ul.secondary a {
-  display: block;
-  height: 24px;
-  margin: 0;
-  padding: 0;
-  border: 1px solid #c0c0c0;
-  text-decoration: none;
-  color: #777;
-  background: url(../images/tab-secondary.png) repeat-x left -56px;
-}
-
-ul.secondary a .tab {
-  display: block;
-  height: 18px; /* 24px (parent) - 6px (padding) */
-  margin: 0;
-  padding: 3px 8px;
-  line-height: 18px;
-}
-
-ul.secondary a:hover,
-ul.secondary a:focus {
-  background: url(../images/tab-secondary.png) repeat-x left bottom;
-}
-
-ul.secondary a.active,
-ul.secondary a.active:hover,
-ul.secondary a.active:focus {
-  border: 1px solid #c0c0c0;
-  color: #000;
-  background: url(../images/tab-secondary.png) repeat-x left top;
+#content div.tabs li.active a {
+  background-image: -webkit-gradient(
+    linear,
+    left bottom,
+    left top,
+    color-stop(0,   rgba(0, 0, 0, 0.08)),
+    color-stop(0.2, rgba(0, 0, 0, 0.00))
+  );
+  background-image: -moz-linear-gradient(
+    center bottom,
+    rgba(0, 0, 0, 0.08)  0%,
+    rgba(0, 0, 0, 0.00) 20%
+  );
+  background-image: -o-linear-gradient(
+    top,
+    rgba(0, 0, 0, 0.08)  0%,
+    rgba(0, 0, 0, 0.00) 20%
+  );
+  color: #3c3c3c;
 }
