Add top margin to sidebars

--- a/site/themes/jdi/css/layout-liquid.css
+++ b/site/themes/jdi/css/layout-liquid.css
@@ -69,6 +69,11 @@ body {
   padding: 0; /* DO NOT CHANGE. Add padding or margin to #content .section. */
 }
 
+.region-sidebar-first,
+.region-sidebar-second {
+  margin-top: 3em;
+}
+
 .one-sidebar #content {
   width: 660px;
 }
