--- a/site/themes/jdi/css/nodes.css
+++ b/site/themes/jdi/css/nodes.css
@@ -67,4 +67,5 @@ h2.node-title /* Node title */ {
 }
 
 .node ul.links /* Node links. See also the ul.links declaration in the pages.css. */ {
+  float: right;
 }
