--- a/site/themes/jdi/css/nodes.css
+++ b/site/themes/jdi/css/nodes.css
@@ -78,6 +78,34 @@ h2.node-title /* Node title */ {
   text-align: center;
 }
 
+.node-teaser .field-name-field-image {
+  height: 200px;
+  position: relative;
+}
+
+.node-teaser .field-name-field-image a {
+  display: block;
+  left: 0;
+  position: absolute;
+  top: 0;
+}
+
+.node-teaser .field-name-field-image a:before {
+  background-color: #fff;
+  content: ' ';
+  display: block;
+  height: 100%;
+  left: 0;
+  opacity: 0.5;
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+
+.node-teaser .field-name-field-image a:hover:before {
+  display: none;
+}
+
 .node ul.links /* Node links. See also the ul.links declaration in the pages.css. */ {
   float: right;
 }
