Improve background images size

--- a/site/themes/jdi/css/page-backgrounds.css
+++ b/site/themes/jdi/css/page-backgrounds.css
@@ -11,6 +11,7 @@
 
 
 body {
+ background: url('../images/page-bg.png');
 }
 
 #page-wrapper {
@@ -20,6 +21,8 @@ body {
 }
 
 #header {
+  background: #333 url('../images/header-bg.png') bottom left repeat-x;
+  color: #fff;
 }
 
 #header .section {
