Fix content area background color in IE7

--- a/site/themes/jdi/css/ie7.css
+++ b/site/themes/jdi/css/ie7.css
@@ -7,6 +7,12 @@
  * sub-theme's .info file for an easy way to use them.
  */
 
+/*
+ * Content
+ */
+#content .section {
+  background-color: #fff;
+}
 
 /*
  * Tabs
