--- a/site/themes/jdi/css/page-projects.css
+++ b/site/themes/jdi/css/page-projects.css
@@ -15,7 +15,8 @@ h2.opera-cpw-title a {
       rgba(0, 0, 0, 0)    0%,
       rgba(0, 0, 0, 0.05) 100%
     );
-  background: -o-linear-gradient(
+  background:
+    -o-linear-gradient(
       top,
       rgba(0, 0, 0, 0),
       rgba(0, 0, 0, 0.05)
