--- a/site/themes/jdi/css/pages.css
+++ b/site/themes/jdi/css/pages.css
@@ -52,25 +52,46 @@ body {
 #header .section {
 }
 
-#logo /* Wrapping link for logo */ {
+#logo,
+#logo:after {
   background: url('../images/logo-sprite.png') no-repeat scroll 0 3px transparent;
-  float: left; /* LTR */
   height: 74px;
   margin: 0;
-  margin-left: -30px;
   padding: 0;
   width: 400px;
-  text-indent: -99999px;
 }
 
-#logo:hover,
-#logo:focus,
-#logo:active {
+#logo /* Wrapping link for logo */ {
+  float: left; /* LTR */
+  margin-left: -30px;
+  position: relative;
+}
+
+#logo:after {
   background-position: 0 -78px;
-  outline: 0;
+  content: '';
+  display: block;
+  opacity: 0;
+  position: absolute;
+  left: 0;
+  text-indent: 0;
+  top: 0;
+  z-index: 50;
+
+     -moz-transition-duration: 0.25s;
+       -o-transition-duration: 0.25s;
+  -webkit-transition-duration: 0.25s;
+     -moz-transition-property: opacity;
+       -o-transition-property: opacity;
+  -webkit-transition-property: opacity;
+}
+
+#logo:hover:after {
+  opacity: 1;
 }
 
 #logo img {
+  display: none;
   vertical-align: bottom;
 }
 
