--- a/site/themes/jdi5/css/page-backgrounds.less
+++ b/site/themes/jdi5/css/page-backgrounds.less
@@ -15,15 +15,12 @@ body {
   -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.4);
 }
 
-#block-system-main {
+#region-content > .region-inner {
   background-color: #fff;
   background-color: rgba(255, 255, 255, 0.7);
   border: 1px solid #e8e8e8;
   box-shadow: 3px 3px 20px rgba(0, 0, 0, 0.1);
+  padding: 10px;
      -moz-box-shadow: 3px 3px 20px rgba(0, 0, 0, 0.1);
   -webkit-box-shadow: 3px 3px 20px rgba(0, 0, 0, 0.1);
-}
-
-#block-system-main .content {
-  padding: 10px;
 }
