Fix logo for browsers that doesn't support background-size

--- a/site/themes/jdi5/css/region--branding.css.less
+++ b/site/themes/jdi5/css/region--branding.css.less
@@ -11,6 +11,13 @@
 /**
  * Logo.
  */
+.no-backgroundsize
+.logo-img {
+  background-color: #ebebeb;
+  border-radius: 5px;
+}
+
+.backgroundsize
 .logo-img a {
   background: url('../images/logo-sprite.png') top left no-repeat;
   background-size: 100%;
@@ -25,6 +32,7 @@
   }
 }
 
+.backgroundsize
 .logo-img img {
   visibility: hidden;
 }
