Create variable to radius

--- a/site/themes/jdi5/css/region--branding.css.less
+++ b/site/themes/jdi5/css/region--branding.css.less
@@ -14,7 +14,7 @@
 .no-backgroundsize
 .logo-img {
   background-color: #ebebeb;
-  border-radius: 5px;
+  border-radius: @base-radius;
 }
 
 .backgroundsize
