Add limit to logo size

--- a/site/themes/jdi5/css/region--branding.css.less
+++ b/site/themes/jdi5/css/region--branding.css.less
@@ -11,6 +11,11 @@
 /**
  * Logo.
  */
+.logo-img a {
+  margin: 0 auto;
+  max-width: @logo-display-width;
+}
+
 .no-backgroundsize
 .logo-img {
   background-color: #ebebeb;
@@ -22,8 +27,6 @@
   background: url('../images/logo-sprite.png') top left no-repeat;
   background-size: 100%;
   display: block;
-  margin: 0;
-  max-width: 392px;
   padding: 0;
 
   &:hover,
