--- a/site/themes/jdi5/css/variables.css.less
+++ b/site/themes/jdi5/css/variables.css.less
@@ -1,2 +1,8 @@
 @base-margin: 10px;
 @base-radius: 5px;
+
+@logo-width: 392px;
+@logo-height: 67px;
+
+@logo-display-width: 280px;
+@logo-display-height: (@logo-display-width / @logo-width) * @logo-height;
