Fix logo in alpha-default

--- a/site/themes/jdi5/css/variables.css.less
+++ b/site/themes/jdi5/css/variables.css.less
@@ -6,3 +6,6 @@
 
 @logo-display-width: 280px;
 @logo-display-height: (@logo-display-width / @logo-width) * @logo-height;
+
+@logo-display-alpha-default-width: 200px;
+@logo-display-alpha-default-height: (@logo-display-alpha-default-width / @logo-width) * @logo-height;
