Improve selection of elements related to primary menu height

--- a/site/themes/jdi5/css/region--menu--alpha-default.css.less
+++ b/site/themes/jdi5/css/region--menu--alpha-default.css.less
@@ -1,8 +1,8 @@
 @import "variables.css.less";
 
-.region-menu div,
-.region-menu nav,
-.region-menu ul {
+.region-menu .region-menu-inner,
+.region-menu .navigation,
+.region-menu .main-menu {
   display: block;
   height: 100%;
 }
