--- a/site/themes/jdi5/css/region--menu--alpha-default.css.less
+++ b/site/themes/jdi5/css/region--menu--alpha-default.css.less
@@ -7,6 +7,10 @@
   height: 100%;
 }
 
+.navigation {
+  position: relative;
+}
+
 .main-menu {
   float: right;
   margin: 0;
@@ -23,4 +27,30 @@
   height: 100%;
   padding: 0 @base-margin * 2;
   vertical-align: middle;
+}
+
+.secondary-menu {
+  background-color: #444;
+  border-radius: 0 0 @base-radius @base-radius;
+  bottom: -2em;
+  display: block;
+  height: 2em;
+  margin: 0;
+  opacity: 0.75;
+  padding: 0 @base-margin / 2;
+  position: absolute;
+  right: @base-margin;
+  z-index: 10;
+}
+
+.secondary-menu:hover {
+  opacity: 1;
+}
+
+.secondary-menu li {
+  margin: 0 @base-margin / 2;
+}
+
+.secondary-menu a {
+  line-height: 1.75em;
 }
