Add style to secondary menu

--- a/site/themes/jdi5/css/region--menu.css.less
+++ b/site/themes/jdi5/css/region--menu.css.less
@@ -39,3 +39,16 @@
   outline: 0;
   text-shadow: 0 0 60px #fff;
 }
+
+.secondary-menu {
+  text-align: right;
+}
+
+.secondary-menu a {
+  color: #ccc;
+  text-decoration: none;
+}
+
+.secondary-menu a:hover {
+  text-decoration: underline;
+}
