--- a/site/themes/jdi5/css/region--branding--alpha-default.css.less
+++ b/site/themes/jdi5/css/region--branding--alpha-default.css.less
@@ -1,7 +1,10 @@
 @import "variables.css.less";
 
+.region-branding {
+  margin: 0;
+}
+
 .logo-img a {
   margin: 0;
-  margin-left: @base-margin * -1 - 5;
   max-width: @logo-display-alpha-default-width;
 }
