--- a/site/themes/jdi5/css/html.css.less
+++ b/site/themes/jdi5/css/html.css.less
@@ -1,3 +1,14 @@
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Lucida Grande", "Lucida Sans Unicode", "Trebuchet MS", sans-serif;
+
+  &,
+  a:link,
+  a:visited {
+    color: #3C3C3C;
+    text-decoration: none;
+  }
+}
+
 img {
   max-width: 100%;
 }
