Fix logo background for disabled JavaScript

--- a/site/themes/jdi5/css/region--branding.css.less
+++ b/site/themes/jdi5/css/region--branding.css.less
@@ -21,10 +21,14 @@
   max-width: @logo-display-width;
 }
 
-.no-backgroundsize
 .logo-img {
   background-color: #ebebeb;
   border-radius: @base-radius;
+}
+
+.backgroundsize
+.logo-img {
+  background-color: transparent;
 }
 
 .backgroundsize
