Remove CSS prefixes

--- a/site/themes/jdi5/css/region--menu.css.less
+++ b/site/themes/jdi5/css/region--menu.css.less
@@ -19,14 +19,9 @@
   padding: @base-margin 0;
   text-decoration: none;
   text-shadow: 0 0 10px #444;
+  transition-duration: 0.4s;
+  transition-property: background-image, color, text-shadow;
   z-index: 10;
-
-     -moz-transition-duration: 0.4s;
-       -o-transition-duration: 0.4s;
-  -webkit-transition-duration: 0.4s;
-     -moz-transition-property: background-image, color, text-shadow;
-       -o-transition-property: background-image, color, text-shadow;
-  -webkit-transition-property: background-image, color, text-shadow;
 }
 
 .main-menu a:hover,
