--- a/site/themes/jdi5/css/variables.css.less
+++ b/site/themes/jdi5/css/variables.css.less
@@ -1,6 +1,12 @@
 @base-margin: 10px;
 @base-radius: 5px;
 
+@a-color: #24f;
+@a-hover-color: #222;
+@a-visited-color: #666;
+
+@hn-a-color: #3C3C3C;
+
 @logo-width: 392px;
 @logo-height: 67px;
 
