Change menus links selectors

--- a/site/themes/jdi5/css/region--menu--alpha-default.css.less
+++ b/site/themes/jdi5/css/region--menu--alpha-default.css.less
@@ -22,7 +22,8 @@
   width: auto;
 }
 
-.main-menu a {
+.main-menu a:link,
+.main-menu a:visited {
   display: table-cell;
   height: 100%;
   padding: 0 @base-margin * 2;
