--- a/site/themes/jdi5/css/region--menu.css.less
+++ b/site/themes/jdi5/css/region--menu.css.less
@@ -13,7 +13,8 @@
   width: 50%;
 }
 
-.main-menu a {
+.main-menu a:link,
+.main-menu a:visited {
   color: #ccc;
   display: block;
   padding: @base-margin 0;
@@ -40,7 +41,8 @@
   text-align: right;
 }
 
-.secondary-menu a {
+.secondary-menu a:link,
+.secondary-menu a:visited {
   color: #ccc;
   text-decoration: none;
 }
