Make logo size fixed

--- a/site/themes/jdi5/css/region--branding--alpha-default.css.less
+++ b/site/themes/jdi5/css/region--branding--alpha-default.css.less
@@ -4,7 +4,11 @@
   margin: 0;
 }
 
+.logo-img {
+  height: @logo-display-alpha-default-height;
+  width: @logo-display-alpha-default-width;
+}
+
 .logo-img a {
   margin: 0;
-  max-width: @logo-display-alpha-default-width;
 }
