Add styles to hr

--- a/site/themes/jdi5/css/html.css.less
+++ b/site/themes/jdi5/css/html.css.less
@@ -30,3 +30,10 @@ h1, h2, h3, h4, h5, h6 {
 img {
   max-width: 100%;
 }
+
+hr {
+  background: transparent;
+  border: 0;
+  border-top: 1px dashed #aaa;
+  height: 1px;
+}
