--- a/site/themes/jdi5/css/html.css.less
+++ b/site/themes/jdi5/css/html.css.less
@@ -1,4 +1,5 @@
 @import "variables.css.less";
+@import "elements.css.less";
 
 a:link,
 a:visited {
@@ -36,4 +37,29 @@ hr {
   border: 0;
   border-top: 1px dashed #aaa;
   height: 1px;
+}
+
+textarea,
+select,
+input[type="date"],
+input[type="datetime"],
+input[type="datetime-local"],
+input[type="email"],
+input[type="month"],
+input[type="number"],
+input[type="password"],
+input[type="search"],
+input[type="tel"],
+input[type="text"],
+input[type="time"],
+input[type="url"],
+input[type="week"] {
+  .field();
+}
+
+button,
+input[type="reset"],
+input[type="submit"],
+input[type="button"] {
+  .button();
 }
