Add base font to content section

--- a/site/themes/jdi5/css/elements.css.less
+++ b/site/themes/jdi5/css/elements.css.less
@@ -1,3 +1,8 @@
+.base-font() {
+  font-family: Helvetica, Arial, "Nimbus Sans L", sans-serif;
+  font-size: 16px;
+}
+
 .field() {
   background-color: #fdfdfd;
   border-color: #999 #aaa #aaa #999;
