Add styles to textarea

--- a/site/themes/jdi5/css/html.css.less
+++ b/site/themes/jdi5/css/html.css.less
@@ -57,6 +57,11 @@ input[type="week"] {
   .field();
 }
 
+textarea {
+  .base-font();
+  padding: @base-margin / 2;
+}
+
 button,
 input[type="reset"],
 input[type="submit"],
