Add styles to links lists

--- a/site/themes/jdi5/css/elements.css.less
+++ b/site/themes/jdi5/css/elements.css.less
@@ -69,3 +69,19 @@
     background-color: rgba(0, 0, 0, 0.02);
   }
 }
+
+.links() {
+  overflow: hidden;
+
+  .links {
+    float: right;
+
+    li {
+      margin: 0;
+
+      a {
+        .button;
+      }
+    }
+  }
+}
