Add limit to fields width

--- a/site/themes/jdi5/css/elements.css.less
+++ b/site/themes/jdi5/css/elements.css.less
@@ -9,6 +9,7 @@
   border-radius: 4px;
   box-shadow: inset 1px 1px 5px rgba(0, 0, 0, 0.2);
   color: #666;
+  max-width: 100%;
 
   &:focus {
     background-color: #fff;
