--- a/site/themes/jdi5/css/elements.css.less
+++ b/site/themes/jdi5/css/elements.css.less
@@ -7,14 +7,14 @@
   background-color: #fdfdfd;
   border-color: #999 #aaa #aaa #999;
   border-radius: 4px;
-  box-shadow: inset 1px 1px 5px rgba(0, 0, 0, 0.2);
+  box-shadow: inset 1px 1px 5px rgba(0, 0, 0, 0.25);
   color: #666;
   max-width: 100%;
 
   &:focus {
     background-color: #fff;
-    border-color: #666;
-    box-shadow: inset 1px 1px 5px rgba(0, 0, 0, 0.2), 0 0 5px rgba(0, 0, 0, 0.5);
+    border-color: #24f;
+    box-shadow: inset 1px 1px 5px rgba(0, 0, 0, 0.25), 0 0 5px rgba(34, 68, 255, 1);
     color: #222;
     outline: 0;
   }
