Remove submodules from JDI

--- a/site/themes/jdi5/css/elements.css.less
+++ b/site/themes/jdi5/css/elements.css.less
@@ -41,7 +41,7 @@
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
   color: #fff;
   text-shadow: 0 -1px 1px rgba(0, 0, 0, 0.5);
-  transition: background-color .2s;
+  .transition(all, 0.5s);
 
   &:hover {
     background-color: #000;
