Add style to inline field

--- a/site/themes/jdi5/css/elements.css.less
+++ b/site/themes/jdi5/css/elements.css.less
@@ -50,6 +50,14 @@
   }
 }
 
+.field-inline() {
+  .field-items,
+  .field-label,
+  .field-item {
+    display: inline-block;
+  }
+}
+
 .alternated-list() {
   & > li:first-child,
   & > .view-content > .views-row-first {
