Add inline fields and comma separated values on tags and categories

--- a/site/themes/jdi5/css/node.css.less
+++ b/site/themes/jdi5/css/node.css.less
@@ -1,5 +1,11 @@
 @import "elements.css.less";
 
+.field-name-field-category,
+.field-name-field-tags {
+  .field-inline();
+  .field-value-comma();
+}
+
 .node-links {
   .links();
 }
