--- a/site/themes/jdi5/css/section--header.css.less
+++ b/site/themes/jdi5/css/section--header.css.less
@@ -3,3 +3,13 @@
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.25);
   color: #fff;
 }
+
+.responsive-layout-narrow,
+.responsive-layout-normal,
+.responsive-layout-wide {
+  .section-header {
+    position: fixed;
+    width: 100%;
+    z-index: 100;
+  }
+}
