--- a/site/themes/jdi5/css/section--content.css.less
+++ b/site/themes/jdi5/css/section--content.css.less
@@ -1,5 +1,14 @@
 @import "elements.css.less";
+@import "variables.css.less";
 
 .section-content {
   .base-font();
+}
+
+.responsive-layout-narrow,
+.responsive-layout-normal,
+.responsive-layout-wide {
+  .section-content {
+    padding-top: (@base-margin * 2) + @logo-display-alpha-default-height;
+  }
 }
