Move secondary menu styles to language bar

--- a/site/themes/jdi5/css/elements.css.less
+++ b/site/themes/jdi5/css/elements.css.less
@@ -5,6 +5,12 @@
   font-size: 16px;
 }
 
+.element-invisible() {
+  position: absolute !important;
+  clip: rect(1px 1px 1px 1px);
+  clip: rect(1px, 1px, 1px, 1px);
+}
+
 .field() {
   background-color: #fdfdfd;
   border-color: #999 #aaa #aaa #999;
