--- a/site/themes/jdi5/css/region--menu.css.less
+++ b/site/themes/jdi5/css/region--menu.css.less
@@ -1,3 +1,4 @@
+@import "elements.css.less";
 @import "variables.css.less";
 
 .main-menu {
@@ -37,17 +38,17 @@
   text-shadow: 0 0 25px #fff;
 }
 
-.secondary-menu {
+.block-locale-language {
   text-align: right;
 }
 
-.secondary-menu a:link,
-.secondary-menu a:visited {
+.block-locale-language a:link,
+.block-locale-language a:visited {
   color: #ccc;
   text-decoration: none;
 }
 
-.secondary-menu a:hover {
+.block-locale-language a:hover {
   color: #fff;
 }
 
@@ -80,11 +81,11 @@
   .main-menu a:visited {
     display: table-cell;
     height: 100%;
-    padding: 0 @base-margin * 2;
+    padding: 0 @base-margin / 2;
     vertical-align: middle;
   }
 
-  .secondary-menu {
+  .block-locale-language {
     background-color: #444;
     border-radius: 0 0 @base-radius @base-radius;
     bottom: -2em;
@@ -98,15 +99,25 @@
     z-index: 10;
   }
 
-  .secondary-menu:hover {
+  .block-locale-language:hover {
     opacity: 1;
   }
 
-  .secondary-menu li {
-    margin: 0 @base-margin / 2;
+  .block-locale-language .block-title {
+    .element-invisible();
   }
 
-  .secondary-menu a {
+  .block-locale-language li {
+    display: inline;
+    margin: 0 @base-margin / 2;
+    padding: 0;
+  }
+
+  .block-locale-language li.active {
+    .element-invisible();
+  }
+
+  .block-locale-language a {
     line-height: 1.75em;
   }
 }
