Add flags to language links

--- a/site/themes/jdi5/css/block--locale.css.less
+++ b/site/themes/jdi5/css/block--locale.css.less
@@ -5,6 +5,19 @@
   text-align: right;
 }
 
+.block-locale-language a {
+  background: url('../images/flags.png') top left no-repeat;
+  padding-left: 24px;
+}
+
+.block-locale-language .en a {
+  background-position: -4px -15px;
+}
+
+.block-locale-language .pt-br a {
+  background-position: -4px -63px;
+}
+
 .block-locale-language a:link,
 .block-locale-language a:visited {
   color: #ccc;
