Increase spacing between links in bigger layouts

--- a/site/themes/jdi5/css/region--menu.css.less
+++ b/site/themes/jdi5/css/region--menu.css.less
@@ -70,3 +70,17 @@
     vertical-align: middle;
   }
 }
+
+.responsive-layout-normal {
+  .main-menu a:link,
+  .main-menu a:visited {
+    padding: 0 @base-margin;
+  }
+}
+
+.responsive-layout-wide {
+  .main-menu a:link,
+  .main-menu a:visited {
+    padding: 0 @base-margin * 2;
+  }
+}
