--- a/site/themes/jdi5/css/sitewide.page.css.less
+++ b/site/themes/jdi5/css/sitewide.page.css.less
@@ -24,8 +24,7 @@ body {
  *
  * Copied from Zen.
  */
-ul.primary,
-ul.secondary {
+ul.primary {
   overflow: hidden;
   *zoom: 1;
   border-bottom: 1px solid #bbbbbb;
@@ -33,22 +32,6 @@ ul.secondary {
   margin: 1em 0 1.5em;
   padding: 0 2px;
   white-space: nowrap;
-}
-
-ul.primary li,
-ul.secondary li {
-  float: left;
-  margin: 0.5em 3px 0;
-}
-
-ul.primary a,
-ul.secondary a {
-  border: 1px solid #e9e9e9;
-  border-right: 0;
-  border-bottom: 0;
-  display: block;
-  line-height: 1.5em;
-  text-decoration: none;
 }
 
 ul.primary li {
@@ -62,6 +45,7 @@ ul.primary li {
   -ms-border-top-right-radius: 4px;
   -o-border-top-right-radius: 4px;
   border-top-right-radius: 4px;
+  float: left;
   text-shadow: white 1px 1px 0;
   border: 1px solid #bbbbbb;
   border-bottom: 0;
@@ -75,6 +59,9 @@ ul.primary li.active {
 
 ul.primary a:link,
 ul.primary a:visited {
+  border: 1px solid #e9e9e9;
+  border-right: 0;
+  border-bottom: 0;
   -moz-border-radius-topleft: 4px;
   -webkit-border-top-left-radius: 4px;
   -ms-border-top-left-radius: 4px;
@@ -92,9 +79,12 @@ ul.primary a:visited {
   transition: background-color 0.3s;
   color: #333;
   background-color: #dedede;
+  display: block;
   letter-spacing: 1px;
+  line-height: 1.5em;
   padding: 0 1em;
   text-align: center;
+  text-decoration: none;
 }
 
 ul.primary a:hover,
@@ -114,46 +104,4 @@ ul.primary a.active {
   background-image: -ms-linear-gradient(#e9e9e9, rgba(233, 233, 233, 0));
   background-image: linear-gradient(#e9e9e9, rgba(233, 233, 233, 0));
   border-color: #fff;
-}
-
-/*
- * Secondary tabs
- */
-ul.secondary {
-  font-size: .9em;
-  margin-top: -1.5em; /* Collapse bottom margin of ul.primary. */
-  padding-bottom: .5em;
-}
-
-ul.secondary a:link,
-ul.secondary a:visited {
-  -webkit-border-radius: 0.75em;
-  -moz-border-radius: 0.75em;
-  -ms-border-radius: 0.75em;
-  -o-border-radius: 0.75em;
-  border-radius: 0.75em;
-  -webkit-transition: background-color 0.3s;
-  -moz-transition: background-color 0.3s;
-  -ms-transition: background-color 0.3s;
-  -o-transition: background-color 0.3s;
-  transition: background-color 0.3s;
-  text-shadow: white 1px 1px 0;
-  background-color: #f2f2f2;
-  color: #666;
-  padding: 0 .5em;
-}
-
-ul.secondary a:hover,
-ul.secondary a:focus {
-  background-color: #dedede;
-  border-color: #999;
-  color: #333;
-}
-
-ul.secondary a.active,
-ul.secondary a:active {
-  text-shadow: #333333 1px 1px 0;
-  background-color: #666;
-  border-color: #000;
-  color: #fff;
 }
