Change tabs font size

--- a/site/themes/jdi5/css/sitewide.page.css.less
+++ b/site/themes/jdi5/css/sitewide.page.css.less
@@ -28,6 +28,7 @@ ul.primary {
   overflow: hidden;
   *zoom: 1;
   border-bottom: 1px solid #bbbbbb;
+  font-size: 0.8em;
   list-style: none;
   margin: 1em 0 1.5em;
   padding: 0 2px;
