--- a/site/themes/jdi5/css/sitewide.region--branding.css.less
+++ b/site/themes/jdi5/css/sitewide.region--branding.css.less
@@ -1,3 +1,4 @@
+@import "properties.css.less";
 @import "variables.css.less";
 
 .region-branding {
@@ -23,7 +24,7 @@
 
 .logo-img {
   background-color: #ebebeb;
-  border-radius: @base-radius;
+  .border-radius(@base-radius);
 }
 
 .backgroundsize
