--- a/site/themes/jdi5/css/elements.css.less
+++ b/site/themes/jdi5/css/elements.css.less
@@ -15,7 +15,7 @@
 .field() {
   background-color: #fdfdfd;
   border-color: #999 #aaa #aaa #999;
-  border-radius: 4px;
+  .border-radius(4px);
   box-shadow: inset 1px 1px 5px rgba(0, 0, 0, 0.25);
   color: #666;
   max-width: 100%;
@@ -44,7 +44,7 @@
     color-stop(1, #222)
   );
   border-color: transparent transparent rgba(0, 0, 0, 0.25);
-  border-radius: 5px;
+  .border-radius(@base-radius);
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
   color: #fff;
   text-shadow: 0 -1px 1px rgba(0, 0, 0, 0.5);
