--- a/site/themes/jdi5/css/sitewide.block--locale.css.less
+++ b/site/themes/jdi5/css/sitewide.block--locale.css.less
@@ -34,7 +34,7 @@
 .responsive-layout-wide {
   .block-locale-language {
     background-color: #444;
-    border-radius: 0 0 @base-radius @base-radius;
+    .border-radius-bottom(@base-radius);
     bottom: -2em;
     display: block;
     height: 2em;
