--- a/site/themes/jdi5/css/sitewide.block.css.less
+++ b/site/themes/jdi5/css/sitewide.block.css.less
@@ -1,3 +1,4 @@
+@import "properties.css.less";
 @import "variables.css.less";
 
 .region-sidebar-first .block .block-title,
@@ -33,7 +34,7 @@
       color-stop(1, #db5e2a)
     );
   border: 2px solid #f69d51;
-  border-radius: 10px;
+  .border-radius(10px);
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.4);
   color: #fff;
   display: inline-block;
@@ -48,7 +49,7 @@
 
 .block a.feed-subscribe:before {
   background: rgba(255, 255, 255, 0.1);
-  border-radius: 50%;
+  .border-radius(50%);
   content: ' ';
   display: block;
   height: 200%;
